# distributed-reservation-system

./: .gitignore  README.md
server/: .gitignore  CMakeLists.txt
server/database/: database.hpp  reservations.db  schema.sql  sqlite_database.hpp
server/middleware/: auth_middleware.hpp
server/models/: CMakeLists.txt  user.hpp
server/security/: CMakeLists.txt  jwt.cpp  jwt.hpp
server/server/: CMakeLists.txt  server.hpp
server/utils/: utils.hpp
src/client/: .gitignore
src/client/app/: globals.css  layout.tsx  page.tsx
src/client/app/auth/: page.tsx
src/client/app/events/[id]/: page.tsx
src/client/components/: Button.tsx  Card.tsx  Input.tsx
src/client/context/: UserContext.tsx
src/client/hooks/: useAuth.ts
src/client/services/: api.ts
src/client/types/: index.ts
src/server/: .gitignore  CMakeLists.txt  main.cpp
src/server/controller/: CMakeLists.txt  auth_controller.cpp  auth_controller.hpp  controller.hpp  event_controller.cpp  event_controller.hpp  user_controller.cpp  user_controller.hpp
src/server/database/: CMakeLists.txt  schema.sql  sqlite_database.cpp  sqlite_database.hpp
src/server/http/: CMakeLists.txt  http_types.hpp
src/server/middleware/: CMakeLists.txt  auth_middleware.hpp
src/server/models/: CMakeLists.txt  event.hpp  user.hpp
src/server/repository/: CMakeLists.txt  event_repository.cpp  event_repository.hpp  repository.hpp  user_repository.cpp  user_repository.hpp
src/server/scripts/: runner.sh  simulation.sh
src/server/security/: CMakeLists.txt
src/server/server/: CMakeLists.txt  server.cpp  server.hpp  thread_pool.cpp  thread_pool.hpp
src/server/service/: CMakeLists.txt  background_service.cpp  background_service.hpp  event_service.cpp  event_service.hpp  service.hpp  user_service.cpp  user_service.hpp
src/server/simulation/: CMakeLists.txt  simulation.cpp
src/server/utils/: CMakeLists.txt  utils.cpp  utils.hpp
